--- a/teamcity_play/.gitignore
+++ b/teamcity_play/.gitignore
@@ -7,3 +7,9 @@ target
 /.project
 /.settings
 /RUNNING_PID
+
+# Ignore Gradle project-specific cache directory
+.gradle
+
+# Ignore Gradle build output directory
+build
